--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY = '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'
+OPENAI_API_KEY = 'YOUR_OPENAI_API
